unpackaged/main/default/objects/Absence__c/Absence__c.object-meta.xml
<CustomObject>
    <label>Absence</label>
    <nameField>
        <displayFormat>AB# {00000000}</displayFormat>
        <label>Absence Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Absences</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>