unpackaged/main/default/objects/Absence__c/fields/Employee_Record__c.field-meta.xml
<CustomField>
    <fullName>Employee_Record__c</fullName>
    <label>Employee Record</label>
    <referenceTo>Employee_Record__c</referenceTo>
    <relationshipLabel>Absences</relationshipLabel>
    <relationshipName>Absences</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>