unpackaged/main/default/objects/Absence__c/fields/ETA_Back_To_Work__c.field-meta.xml
<CustomField>
    <fullName>ETA_Back_To_Work__c</fullName>
    <inlineHelpText>ETA of when the employee will be returning to work</inlineHelpText>
    <label>ETA Back To Work</label>
    <type>Date</type>
</CustomField>