unpackaged/main/default/objects/Absence__c/fields/Has_Manager_Approved_Absence_To_Be_Paid__c.field-meta.xml
<CustomField>
    <fullName>Has_Manager_Approved_Absence_To_Be_Paid__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Manager Approved Absence To Be Paid?</label>
    <type>Checkbox</type>
</CustomField>