unpackaged/main/default/objects/Absence__c/fields/IsThis_Year__c.field-meta.xml
<CustomField>
    <fullName>IsThis_Year__c</fullName>
    <defaultValue>false</defaultValue>
    <label>This Year?</label>
    <type>Checkbox</type>
</CustomField>