unpackaged/main/default/objects/Absence__c/fields/Manager_s_Email_AddressAuto__c.field-meta.xml
<CustomField>
    <fullName>Manager_s_Email_AddressAuto__c</fullName>
    <formula>Employee_Record__r.User__r.Manager.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Manager's Email Address</label>
    <type>Text</type>
</CustomField>