unpackaged/main/default/objects/Absence__c/fields/Reason__c.field-meta.xml
<CustomField>
    <fullName>Reason__c</fullName>
    <inlineHelpText>Enter details of the reason for the absence</inlineHelpText>
    <label>Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>