unpackaged/main/default/objects/Absence__c/fields/Return_To_Work_Interview__c.field-meta.xml
<CustomField>
    <fullName>Return_To_Work_Interview__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Has the return to work interview happened?</inlineHelpText>
    <label>Return To Work Interview</label>
    <type>Checkbox</type>
</CustomField>