unpackaged/main/default/objects/Absence__c/fields/Return_To_Work_Interview_Comments__c.field-meta.xml
<CustomField>
    <fullName>Return_To_Work_Interview_Comments__c</fullName>
    <inlineHelpText>Enter details that were discussed at the return to work interview</inlineHelpText>
    <label>Return To Work Interview (Comments)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>