unpackaged/main/default/objects/Absence__c/fields/Return_to_Work_Interview_Date__c.field-meta.xml
<CustomField>
    <fullName>Return_to_Work_Interview_Date__c</fullName>
    <label>Return to Work Interview Date</label>
    <type>Date</type>
</CustomField>