unpackaged/main/default/objects/Absence__c/fields/Starting__c.field-meta.xml
<CustomField>
    <fullName>Starting__c</fullName>
    <label>Start Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>