unpackaged/main/default/objects/Absence__c/fields/This_Year__c.field-meta.xml
<CustomField>
    <fullName>This_Year__c</fullName>
    <formula>YEAR(Starting__c)=YEAR(TODAY())</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>This Year?</label>
    <type>Checkbox</type>
</CustomField>