unpackaged/main/default/objects/Absence__c/recordTypes/Compassionate_Leave.recordType-meta.xml
<RecordType>
    <fullName>Compassionate_Leave</fullName>
    <active>true</active>
    <label>Compassionate Leave</label>
</RecordType>