unpackaged/main/default/objects/Absence__c/recordTypes/Maternity_Leave.recordType-meta.xml
<RecordType>
    <fullName>Maternity_Leave</fullName>
    <active>true</active>
    <label>Maternity Leave</label>
</RecordType>