unpackaged/main/default/objects/Absence__c/recordTypes/Sick_Leave.recordType-meta.xml
<RecordType>
    <fullName>Sick_Leave</fullName>
    <active>true</active>
    <label>Sick Leave</label>
</RecordType>