unpackaged/main/default/objects/Absence__c/validationRules/End_Date_After_Start_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>End_Date_After_Start_Date</fullName>
    <active>true</active>
    <description>End Date must be equal or greater than Start Date</description>
    <errorConditionFormula>End__c  &lt;  Starting__c</errorConditionFormula>
    <errorDisplayField>End__c</errorDisplayField>
    <errorMessage>End Date must be equal or greater than Start Date</errorMessage>
</ValidationRule>