unpackaged/main/default/objects/Absence__c/validationRules/Manager_permission_over_paid_checkbox.validationRule-meta.xml
<ValidationRule>
    <fullName>Manager_permission_over_paid_checkbox</fullName>
    <active>true</active>
    <description>Only the manager of the employee can tick the "Has Manager Approved Absence To Be Paid?" checkbox</description>
    <errorConditionFormula>ISCHANGED(Has_Manager_Approved_Absence_To_Be_Paid__c )

&amp;&amp;

$User.Id &lt;&gt; Employee_Record__r.User__r.ManagerId</errorConditionFormula>
    <errorDisplayField>Has_Manager_Approved_Absence_To_Be_Paid__c</errorDisplayField>
    <errorMessage>Only the manager of the employee can tick the "Has Manager Approved Absence To Be Paid?" checkbox</errorMessage>
</ValidationRule>