unpackaged/main/default/objects/Absence__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Employee_Record__c</columns>
    <columns>Reason__c</columns>
    <columns>Starting__c</columns>
    <columns>End__c</columns>
    <columns>Number_of_Days__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>IsThis_Year__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>